--- a/style.css
+++ b/style.css
@@ -1,138 +1,120 @@
-/* Instellingen om fouten te helpen vinden,
-   uncomment om aan te zetten */
-
-/* zorg dat elke box een gestippelde rand krijgt, 
-   zodat je de afmeting goed kunt zien, 
-   let op 1: dit kan de layout soms kan wijzigen 
-   let op 2: laat 1 sterretje voor { staan als je commentaar weghaalt */
-/*  * {border: 1px dotted black;}   */
-  
-/* zorg dat elke box een doorzichtige donkere achtergrond krijgt, 
-   hoe meer boxen in elkaar hoe donkerder de achtergrondkleur 
-   letop: laat 1 sterretje voor { staan als je commentaar weghaalt */
-/*  * {background-color: rgba(0,0,0,5%);}  */
-
-
-/************************* BASISINSTELLINGEN *************************/
-
-/* Basisinstellingen voor alle pagina's, alleen aanpassen als je pro wilt worden */
-
-* {                               /* geldt voor alles */
-  box-sizing: border-box;         /* zorg dat border meetelt bij de width en height van boxen */
-  margin: 0px;                    /* standaard marge 0 pixels */
+@keyframes draaien { /* definieer animatie */
+  from {transform: rotate(0deg)}
+  to   {transform: rotate(360deg)};
+}
+.foto-roy-right { /* koppel animatie aan box */
+  animation-name: draaien; /* zet hier dezelfde naam als die je achter @keyframes gebruikt */
+  animation-duration: 1s; /* doe 2 seconde over animatie */
+  animation-iteration-count: 1; /* heraal oneindig keer */
+  animation-timing-function: 1; /* meestal is ease mooier dan lineair, maar bij draaien niet */
 }
 
-html, body {                      /* geldt voor html en body */
-  background-color: #EEEEEE;    /* achtergrondkleur lichtgrijs */
-  color: #303030;               /* tekstkleur donkergrijs */
-}  
-
-div {                             /* geldt voor div */
-  overflow: hidden;               /* zorgt dat een <div> de hoogte krijgt van wat erin zit
-                                     (anders tellen de floats erin niet mee voor de hoogte
-                                     en wordt dus wel eens hoogte 0) */
+.foto-roy-left { /* koppel animatie aan box */
+  animation-name: draaien; /* zet hier dezelfde naam als die je achter @keyframes gebruikt */
+  animation-duration: 1s; /* doe 2 seconde over animatie */
+  animation-iteration-count: 1; /* heraal oneindig keer */
+  animation-timing-function: 1; /* meestal is ease mooier dan lineair, maar bij draaien niet */
 }
 
-
-/************************* ALLE WEBPAGINA'S *************************/
-
-/* Indeling en opmaak voor alle pagina's */
-
-.page {
-  width: 700px;                   /* vaste breedte van 700 pixels */
-  margin: 10px auto;              /* boven en onder 10 pixels marge,
-                                     links en rechts marge gelijk verdeeld (gecentreerd) */
+.fotodrink { /* koppel animatie aan box */
+  animation-name: draaien; /* zet hier dezelfde naam als die je achter @keyframes gebruikt */
+  animation-duration: 1s; /* doe 2 seconde over animatie */
+  animation-iteration-count: 1; /* heraal oneindig keer */
+  animation-timing-function: 1; /* meestal is ease mooier dan lineair, maar bij draaien niet */
 }
 
-header, footer {                  /* geldt voor header en footer */
-  margin: 10px 0px;
+h1 { /* koppel animatie aan box */
+  animation-name: draaien; /* zet hier dezelfde naam als die je achter @keyframes gebruikt */
+  animation-duration: 1s; /* doe 2 seconde over animatie */
+  animation-iteration-count: 1; /* heraal oneindig keer */
+  animation-timing-function: 1; /* meestal is ease mooier dan lineair, maar bij draaien niet */
 }
 
-main {                       
-  text-align: justify;            /* tekst links en rechts uitvullen */
+.foto-roy-right {
+width: 30%;
+border: ridge 6px rgb(0, 0, 0);
+float: right; 
 }
 
-h1, h2, h3 {                      /* geldt voor h1 en h2 en h3 */
-  margin: 10px 0px;
-  text-align: center;             /* tekst centreren */
-  color: skyblue;
-} 
-
-p {
-  margin: 10px 0px;
-  text-align: justify;            /* tekst links en rechts uitvullen */
+.foto-roy-left {
+  width: 30%;
+  border: ridge 6px rgb(0, 0, 0);
+  float:left;
 }
-
-img {
-  margin: 10px 0px;
+.fotodrink {
+      max-width: 30%;
+      float:right;
 }
+ 
+ footer {
+   margin: 10px 0px;
+   float: center;
+ }
 
-a {
-  color: skyblue;
-  text-decoration: none;
-}
+ h1 {
+   float: center;
+   text-align: center;
+   padding-bottom: 0%;
+ }
 
-a:hover {                         /* <a> als je er met de muis op staat */
-  text-decoration: underline;
-}
-
-.smalltext {
+ p {
   text-align: center;
-  font-size: 0.7em;
+  padding-right: 1%;
+  padding-left: 1%;
+ }
+
+ /* Reset standaardmarges en paddings */
+ body, ul {
+     margin: 0;
+     padding: 0;
+     font-size: 150%;
+ }
+ footer {
+  margin: 0%;
+ }
+
+ /* Stijl voor de gehele container */
+ .container {
+     display: flex;
+ }
+
+ /* Stijl voor de navigatiebalk */
+ .navbar {
+     background-color: rgb(89, 0, 255);
+     flex: 1; /* Laat de navigatiebalk groeien en vult de beschikbare ruimte in */
+     max-width: 100px; /* Stel een maximale breedte in voor de navigatiebalk */
+     padding: 20px;
+ }
+
+
+ /* Stijl voor de lijst met namen */
+ .navbar ul {
+     list-style: none;
+     
+ }
+
+ /* Stijl voor elk lijstitem */
+ .navbar li {
+     padding: 70% 0;
+     text-align: center;
+     font-size: 20px;
+     color: rgb(255, 255, 255);
+     
+     
+ }
+
+ /* Stijl voor hover (wanneer de muis erover beweegt) */
+ .navbar li:hover {
+     background-color: rgb(89, 0, 255);
+ }
+
+ /* Stijl voor de inhoud naast de navigatiebalk */
+ .content {
+     flex: 2; /* Laat de tekstinhoud breder groeien */
+     padding: 20px;
+     padding-right: 20px
+ }
+
+.backgroundhome {
+  background-color: rgb(155, 235, 255)
 }
-
-/************************* NAVIGATIEBALK *************************/
-
-/* navigatiebalk voor alle pagina's */
-
-nav ul {                        /* <ul> die child is van <nav> */
-  list-style-type: none;
-  margin: auto;
-  padding: 0;
-  background-color: #dddddd;
-  overflow: hidden;
-}
-
-nav ul li {                     /* <li> die child is van <ul> die op zijn beurt child is van <nav> */
-  float: left;
-}
-
-nav li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-nav li a:hover {
-  background-color: #aaaaaa;
-}
-
-nav li a.active {
-  background-color: skyblue;
-}
-
-
-/************************* HOOFDPAGINA *************************/
-
-/* Indeling en opmaak voor hoofdpagina */
-
-/* .item {} */ /* hier doen we nog niks mee, dat mag je zelf toevoegen */
-
-.item-plaatje {
-  float: left;
-  width: 250px;
-  padding-right: 15px; /* zorgt dat plaatje niet tegen tekst komt */
-}
-
-.item-tekst {
-  float: right;
-  width: 450px;
-}
-
-/************************* SUBPAGINA *************************/
-
-/* Indeling en opmaak voor subpagina */
-
-/* verzin deze zelf... */
